--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 body{
   margin: 0;
-  background-image: url("website.jpg");
+  background-image: url("img/website.jpg");
   background-size: cover;
   background-repeat: no-repeat;
 }
