--- a/index.css
+++ b/index.css
@@ -9,14 +9,23 @@ body{
   background-size: cover;
   background-repeat: no-repeat;
   height: 140vh;
+  margin-top: 10vh;
 }
 
 footer{
   margin-top: 3%;
   text-align: center;
+  margin-top: 34vh;
+  font-size: 30px;
 }
 
-
+.header{
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  background: var(--color1);
+  transition: all 350ms ease-out;
+}
 
 .footicons{
   text-align: center;
@@ -25,7 +34,7 @@ footer{
   padding-bottom: 0.2px;
 }
 .footp{
-  font-size: 10px;
+  font-size: 14px;
 }
 .fa {
   padding: 0.3%;
@@ -93,14 +102,6 @@ hr {
 width: 50px;
 height: 50px;
 padding-top: 1%;
-}
-
-.header{
-  position: fixed;
-  top: 0px;
-  width: 100%;
-  background: var(--color1);
-  transition: all 350ms ease-out;
 }
 
 .icon{
