--- a/index.css
+++ b/index.css
@@ -223,3 +223,38 @@ _::-webkit-full-page-media, _:future, :root .safari_only, .container {
 #myBtn:hover {
   background-color: #555; /* Add a dark-grey background on hover */
 }
+#section1{
+  align-items: center;
+  display: flex;
+  width: 80%;
+  margin: auto;
+  padding-top: 2%;
+  padding-bottom: 2%;
+}
+h1 {
+  font-size: 50px;
+}
+#section1-text-paragraph{
+  font-family: sans-serif;
+  font-size: 25px;
+  padding-right: 5%;
+}
+#button1{
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 20px;
+}
+#button2{
+  border: none;
+  color: black;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 20px;
+}
