--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ body{
   background-image: url("img/website.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-  height: 140vh;
+  height: ;
   margin-top: 10vh;
 }
 
@@ -17,6 +17,7 @@ footer{
   text-align: center;
   margin-top: 34vh;
   font-size: 30px;
+  width: 100%;
 }
 
 .header{
@@ -29,7 +30,7 @@ footer{
 
 .footicons{
   text-align: center;
-  background: linear-gradient(to bottom, #F8C26D 8%, #FD9E06 100%);
+  background: linear-gradient(to bottom, #F8C26D 10%, #FD9E06 100%);
   padding-top: 0.2px;
   padding-bottom: 0.2px;
 }
@@ -69,24 +70,23 @@ hr {
 }
 
 .content{
-  background:linear-gradient(to right, #EBE5EA 30%,  #575fcf 100%);
+  background:linear-gradient(to right, #EBE5EA 30%,  #575fcf 110%);
   border-radius: 2%;
   width: 80%;
-  margin-left: 10%;
-  margin-bottom: 1%;
+  display: flex;
+  height: 100%;
+  margin: auto;
 }
 
 .contimg{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   width: 40%;
-  height: 40%;
-
 }
 
-.container{
-  padding-top: 2%;
-  padding-bottom: 1%;
-  width: 100%;
-  margin: auto;
+.countries{
+  padding: 2%;
 }
 
 .links{
@@ -95,7 +95,7 @@ hr {
 }
 
 .name{
-  margin-right: 8%;
+  margin-right: 30%;
 }
 
 #mylogo{
@@ -165,28 +165,20 @@ padding-top: 1%;
   }
 }
 
-@media screen and (min-width:400px) {
-  .container{
-    margin-top: 24%;
-  }
+@media screen and (max-width:400px) {
+#section1{
+  display: block;
+}
 }
 
 @media screen and (min-width:600px) {
-  .container{
-    margin-top: 14%;
+  #section1{
+    display: block;
   }
 }
 
-
-_::-webkit-full-page-media, _:future, :root .safari_only, .container {
-    margin-top: 12%;
-}
-
 @media screen and (-webkit-min-device-pixel-ratio:0) and (min-resolution:.001dpcm) {
-    .chrome, .container{
-        margin-top: 12%;
-    }
-    footer{
+    .chrome,footer{
       font-size: 30px;
     }
     .fa {
