--- a/index.css
+++ b/index.css
@@ -258,7 +258,7 @@ h1 {
 }
 
 /* The Modal (background) */
-.modal {
+.w3-modal {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
@@ -272,7 +272,7 @@ h1 {
 }
 
 /* Modal Content/Box */
-.modal-content {
+.w3-modal-content {
   background-color: #fefefe;
   margin: 15% auto; /* 15% from the top and centered */
   padding: 20px;
