--- a/index.css
+++ b/index.css
@@ -15,7 +15,7 @@ body{
 footer{
   margin-top: 3%;
   text-align: center;
-  margin-top: 34vh;
+  margin-top: ;
   font-size: 30px;
   width: 100%;
 }
@@ -75,7 +75,7 @@ hr {
   width: 80%;
   display: flex;
   height: 100%;
-  margin: auto;
+  margin:auto;
 }
 
 .contimg{
@@ -165,15 +165,34 @@ padding-top: 1%;
   }
 }
 
-@media screen and (max-width:400px) {
-#section1{
+@media screen and (max-width:500px) {
+.content{
   display: block;
+  }
+#section1-content{
+  display: block;
+}
+#rope{
+  width: 100%;
+  margin: auto;
+  padding-top: 3%;
 }
 }
 
-@media screen and (min-width:600px) {
-  #section1{
-    display: block;
+@media screen and (min-width:500px) {
+  #section1-content{
+    display: flex;
+  }
+  .rope{
+    width: 50%;
+    margin-top:auto;
+    margin-bottom: auto;
+  }
+  #rope{
+    width: 100%;
+  }
+  .h1andp{
+    width: 50%;
   }
 }
 
@@ -217,9 +236,6 @@ padding-top: 1%;
 }
 #section1{
   align-items: center;
-  display: flex;
-  width: 80%;
-  margin: auto;
   padding-top: 2%;
   padding-bottom: 2%;
 }
@@ -229,7 +245,8 @@ h1 {
 #section1-content{
   font-family: sans-serif;
   font-size: 25px;
-  display: flex;
+  width: 80%;
+  margin: auto;
 }
 #button1{
   background-color: #4CAF50;
@@ -249,12 +266,6 @@ h1 {
   text-decoration: none;
   display: inline-block;
   font-size: 20px;
-}
-
-#rope{
-  width: 400px;
-  height: 400px;
-  padding-left: 1%;
 }
 
 /* The Modal (background) */
