--- a/index.css
+++ b/index.css
@@ -8,7 +8,6 @@ body{
   background-image: url("img/website.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-  height: ;
   margin-top: 10vh;
 }
 
@@ -70,9 +69,8 @@ hr {
 }
 
 .content{
-  background:linear-gradient(to right, #EBE5EA 30%,  #575fcf 110%);
   border-radius: 2%;
-  width: 80%;
+  width: 81%;
   display: flex;
   height: 100%;
   margin:auto;
@@ -85,8 +83,16 @@ hr {
   width: 40%;
 }
 
+.modalimg{
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .countries{
   padding: 2%;
+  border: 1px solid;
+  background:linear-gradient(to bottom, #EBE5EA 30%,  #573fcc 110%);
+  margin: 1%;
 }
 
 .links{
@@ -177,6 +183,34 @@ padding-top: 1%;
   margin: auto;
   padding-top: 3%;
 }
+#myBtn{
+  bottom: 20px; /* Place the button at the bottom of the page */
+  right: 7px; /* Place the button 30px from the right */
+  font-size: 15px; /* Increase font size */
+  padding: 8.5px; /* Some padding */
+}
+.countries{
+  margin-top: 3%;
+  margin-bottom: 3%;
+}
+.modalh1{
+  font-size: 2em;
+  float: right;
+  color: blue;
+}
+.modalimg{
+width: 22%;
+height:13%;
+position: fixed;
+float:left;
+z-index: 9;
+}
+.modalp{
+float: left;
+}
+.w3-container{
+  align-content: center;
+}
 }
 
 @media screen and (min-width:500px) {
@@ -193,6 +227,15 @@ padding-top: 1%;
   }
   .h1andp{
     width: 50%;
+  }
+  #myBtn{
+    bottom: 20px; /* Place the button at the bottom of the page */
+    right: 30px; /* Place the button 30px from the right */
+    font-size: 18px; /* Increase font size */
+    padding: 15px; /* Some padding */
+  }
+  .modalimg{
+    width: 40%;
   }
 }
 
@@ -213,17 +256,13 @@ padding-top: 1%;
 #myBtn {
   display: none; /* Hidden by default */
   position: fixed; /* Fixed/sticky position */
-  bottom: 20px; /* Place the button at the bottom of the page */
-  right: 30px; /* Place the button 30px from the right */
   z-index: 99; /* Make sure it does not overlap */
   border: none; /* Remove borders */
   outline: none; /* Remove outline */
   background-color: red; /* Set a background color */
   color: white; /* Text color */
   cursor: pointer; /* Add a mouse pointer on hover */
-  padding: 15px; /* Some padding */
   border-radius: 10px; /* Rounded corners */
-  font-size: 18px; /* Increase font size */
   -moz-transform: rotate(270deg);
     -webkit-transform: rotate(270deg);
     -o-transform: rotate(270deg);
@@ -282,6 +321,15 @@ h1 {
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 
+.w3-button{
+  color: blue;
+}
+
+.w3-button:hover,.w3-button:focus {
+  color: violet;
+  cursor: pointer;
+}
+
 /* Modal Content/Box */
 .w3-modal-content {
   background-color: #fefefe;
@@ -289,6 +337,10 @@ h1 {
   padding: 20px;
   border: 1px solid #888;
   width: 80%; /* Could be more or less, depending on screen size */
+}
+
+.w3-container{
+  display: flex;
 }
 
 /* The Close Button */
