--- a/index.css
+++ b/index.css
@@ -29,7 +29,7 @@ footer{
 
 .footicons{
   text-align: center;
-  background: linear-gradient(to bottom, #F8C26D 10%, #FD9E06 100%);
+  background: linear-gradient(to bottom, #861e94 10%, #590864 100%);
   padding-top: 0.2px;
   padding-bottom: 0.2px;
 }
@@ -66,6 +66,7 @@ hr {
   width: 35%;
   margin: auto;
   margin-top: 1%;
+  color: white;
 }
 
 .content{
@@ -90,8 +91,8 @@ hr {
 
 .countries{
   padding: 2%;
-  border: 1px solid;
-  background:linear-gradient(to bottom, #EBE5EA 30%,  #573fcc 110%);
+  border: none;
+  background-color: #EBE5EA;
   margin: 1%;
 }
 
