--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,13 @@ body, html {
 	width: 100% !important;
 	height: 100% !important;
 }
+
+.logo{
+	width:6%;
+	height:10%;
+	position: fixed;
+}
+
 h1, h2, h3, h4 {
 	font-family: 'Raleway', sans-serif;
 }
