--- a/css/style.css
+++ b/css/style.css
@@ -181,6 +181,7 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 	-moz-background-size: cover;
 	background-size: cover;
 	-o-background-size: cover;
+	animation: slide 20s infinite;
 }
 .intro .overlay {
 	background: rgba(0,0,0,0.4);
@@ -442,4 +443,30 @@ color: #999;
 }
 #footer a:hover {
 	color: #eee;
+}
+@keyframes slide{
+	25%{
+		background: url('../img/gallery-bg.jpg');
+		background-repeat: no-repeat;
+		background-size: 100%;
+	}
+	50%{
+		background: url('../gallery/03.jpg');
+		background-repeat: no-repeat;
+		background-size: 100%;
+
+	}
+	75%{
+		background: url('../img/chef.jpg');
+		background-repeat: no-repeat;
+		background-size: 100%;
+
+	}
+	100%{
+		background: url('../gallery/04.JPG');
+		background-repeat: no-repeat;
+		background-size: 100%;
+
+	}
+
 }
