--- a/css/style.css
+++ b/css/style.css
@@ -446,24 +446,24 @@ color: #999;
 }
 @keyframes slide{
 	25%{
-		background: url('../img/gallery-bg.jpg');
+		background: url('../img/intro-bg.jpg');
 		background-repeat: no-repeat;
 		background-size: 100%;
 	}
 	50%{
-		background: url('../gallery/03.jpg');
+		background: url('../img/gallery/03.jpg');
 		background-repeat: no-repeat;
 		background-size: 100%;
 
 	}
 	75%{
-		background: url('../img/chef.jpg');
+		background: url('../img/gallery-bg.jpg');
 		background-repeat: no-repeat;
 		background-size: 100%;
 
 	}
 	100%{
-		background: url('../gallery/04.JPG');
+		background: url('../img/gallery/04.JPG');
 		background-repeat: no-repeat;
 		background-size: 100%;
 
