--- a/countries/css/pricing.css
+++ b/countries/css/pricing.css
@@ -137,7 +137,7 @@
 	margin: 0;
 	/*padding: 0.25em 0 2.5em;*/
 	list-style: none;
-	text-align: center;
+	text-align: left;
 	color: #8b909d;
 	padding: 0 0 2em 0;
 }
