--- a/css/style.css
+++ b/css/style.css
@@ -512,24 +512,28 @@ color: #999;
 }
 
 .service-icon{
-  display: inline-block;
-  width: 70px;
-  height: 70px;
-  border: 3px solid black;
-  color: black;
-  transform: rotate(45deg);
-  margin-bottom: 30px;
-  margin-top: 16px;
-  transition: 0.3s linear;
+
+
 }
 .service-icon i{
   line-height: 70px;
-  transform: rotate(-45deg);
-  font-size: 26px;
+
+  font-size: 40px;
+
 }
 .service-box:hover .service-icon{
-  background: black;
-  color: black;
+  background: gray;
+	display: inline-block;
+	width: 70px;
+	height: 70px;
+	border: 3px solid black;
+	color: black;
+	transform: rotate(45deg);
+	margin-bottom: 30px;
+	margin-top: 16px;
+	transition: 0.3s linear;
+	border-radius: 100%;
+
 }
 .service-title{
   font-size: 18px;
