--- a/css/style.css
+++ b/css/style.css
@@ -603,8 +603,8 @@ transform: rotate(45deg);
   }
 	.gobottombtn{
 	  position: fixed;
-	  width: 50px;
-	  height: 50px;
+	  width: auto;
+	  height: auto;
 	  background: #27ae60;
 	  bottom: 40px;
 	  right: 50px;
