--- a/css/style.css
+++ b/css/style.css
@@ -610,23 +610,22 @@ transform: rotate(45deg);
   }
 	.gobottombtn{
 	  position: fixed;
-	  width: 4%;
-	  height: 9%;
+	  width: 10%;
 	  background-image: url(../img/apply1.png);
-	  bottom: 20px;
-	  right: 5px;
-		
+	  bottom: 2.5%;
+	  right: 2.5%;
+	  padding-bottom: 10%;
 	  text-decoration: none;
 	  text-align: center;
 	  background-repeat: no-repeat;
 	  background-size: 100%;
-	  font-size: 22px;
-		padding-left: 5px;
-		padding-right: 5px;
-		font-family: 'Raleway', sans-serif;
+      padding-left: 3%;
+	  padding-right: 3%;
+	  font-family: 'Raleway', sans-serif;
 	}
 	.gobottombtn:hover{
-		background-image: url(../img/apply2.png);
+		transition: ease;
+		background-image: url(../img/apply2.png); 
 		color: white;
 	}
 #malaysia{
