--- a/css/style.css
+++ b/css/style.css
@@ -97,8 +97,8 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 	transition: all 0.8s;
 }
 #menu.navbar-default {
-	background-color: rgba(248, 248, 248, 0);
-	border-color: rgba(231, 231, 231, 0);
+	background-color:transparent;
+	border-color:transparent;
 }
 #menu.navbar-default .navbar-nav > li > a {
 	text-transform: uppercase;
@@ -679,4 +679,164 @@ transform: rotate(45deg);
 #thailand{
 	background-image: url(../countries/images/tha2.jpg);
 	background-repeat: no-repeat;
+}
+.navbar-toggle{
+	margin-right: 49%;
+	
+}
+
+@media screen and (max-width: 600px){
+	.navbar-toggle{
+		margin-right: 45%;
+	}
+}
+
+
+.btn {
+	display: inline-block;
+	position: fixed;
+	top: 0;
+	right: 0;
+	color: white;
+	background-color: transparent;
+	border: none;  
+	cursor: pointer;
+	z-index: 0;
+	padding: 0;
+	margin-top: 1%;
+	margin-right: 2%;
+	width: 50px;
+	height: 50px;
+  }
+  
+  .btn:focus {
+	outline-color: transparent;
+  }
+  
+  
+  /* btn-blow */
+  .btn-blow::after {
+	content: "";
+	width: 120px;
+	height: 120px;
+	background-color: rgba(0,0,0,.2);
+	position: absolute;
+	top: calc(50% - 60px);
+	left: calc(50% - 60px);
+	opacity: 0;
+	z-index: -4;
+	transition-duration: .4s;
+	pointer-events: none;
+  }
+  
+  .btn-blow:focus::after {
+	opacity: 1;
+	transform: scale(1);
+  }
+  .btn-blow:focus:hover::after {
+	transform: scale(1.2);
+  }
+  
+  .btn-blow {
+	width: 100px;
+	height: 100px;  
+  }
+  
+  .btn-blow * {
+	pointer-events: none;
+  }
+  
+  .btn-blow span {
+	position: relative;
+	overflow: hidden;
+	display: flex;
+	left:-50px;
+	width: 200px;
+	height: 100px;
+	justify-content: center;
+	align-items: center;
+	border-radius: 0;
+	transition: transform .4s, border-radius .4s;  
+	font-family: 'Coiny', cursive;
+	transition-timing-function: cubic-bezier(.5,2.4,.7,.5);
+	border-radius: 50px;
+  }
+  .btn-blow span::before {
+	content: "";
+	position: absolute;
+	height: 100%;
+	width: 100%;
+	background-color: gray;
+	background-image: radial-gradient(circle, #ff69b4 0%, #e23a8e 30%, #e23a8e 100%);
+	background-size: 200% 200%;
+	background-repeat: no-repeat;
+	background-position: center;
+	top: 0;
+	left: 0;
+	transform: rotate(90deg);
+	z-index: -1;  
+	border-radius: 0;
+	transition: all .4s;
+	
+  }
+  .btn-blow:hover span {
+	transform: scale(1.3);
+	transition: transform .8s, border-radius .4s;  
+	border-radius: 50%;  
+  }
+  .btn-blow:hover span::before {
+	transition: background-size .8s, border-radius .4s; 
+	border-radius: 50%;
+	background-size: 120% 120%;
+  }
+  .tapedza{
+	  top: 0;
+	   right: 0;
+	  position: fixed;
+	  margin: 1% 2%;
+	  
+	 
+  }
+  .circle{
+	  text-align: center;
+	  width: 80px;
+	  font-size: 12px;
+	  padding: 40px 2px;
+	  line-height: 0;
+	  background: whitesmoke;
+	  color: black;
+	  border-radius: 50px;
+	  cursor: pointer;
+	  transition: 1.3s ;
+	  box-shadow: 2px 2px 5px grey;
+	  
+	  
+  }
+
+  .circle:hover{
+	  background: red;
+	  transform: rotate(360deg);
+	  color: white;
+  }
+  @media screen and (max-width:600px){
+	.tapedza{
+		top: 0;
+		 right: 0;
+		position: fixed;
+		margin: 2.5% 2.5%;
+		
+	   
+	}
+	.circle{
+		font-size: 8px;
+		text-align: center;
+	  width: 50px;
+	  padding: 25px 2px;
+	  line-height: 0;
+	  background: whitesmoke;
+	  color: black;
+	  border-radius: 50px;
+	  cursor: pointer;
+	  transition: 1s;
+	}
 }
